# rdmalib2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/rdmalib2/: cm.h  common.h  context.h  cq.h  mem.h  qp.h  rdmalib2.h  tweakme.h  verb.h
include/rdmalib2/predeclare/: qp_pre.h  qp_verb_compat.h  verb_pre.h
tests/: dummy.cpp  send_recv.cpp  server.cpp
